Ajustes de nomes de pacotes

--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>com.github.carreiras</groupId>
-    <artifactId>java-spring-boot-car</artifactId>
+    <groupId>com.ewecarreira</groupId>
+    <artifactId>car-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>java-spring-boot-car</name>
-    <description>MIcroserviço API C.A.R.</description>
+    <name>car-api</name>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>11</java.version>
